--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Google Maps API Key
 # Get your key from: https://console.cloud.google.com/apis/credentials
-REACT_APP_GOOGLE_MAPS_API_KEY=539585390166-ee7cetcrftoi2s36f8crook6ri0cv6au.apps.googleusercontent.com
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Backend API URL - Comment out to use production Render URL
+# VITE_API_URL=http://localhost:5000/api
